src/objects/pymt__Log_Entry__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>Used to track debugging, error and notification events related to PaymentConnect</description>
    <fields>
        <fullName>pymt__Code__c</fullName>
        <inlineHelpText>Error or Event code</inlineHelpText>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__PaymentConnect_Settings__c</fullName>
        <label>PaymentConnect Settings</label>
        <referenceTo>pymt__Settings__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>Log_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>pymt__Payment_Method__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>pymt__PaymentX__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Processor_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Connection</label>
        <referenceTo>pymt__Processor_Connection__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Recurring_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Payment</label>
        <referenceTo>pymt__Payment_Profile__c</referenceTo>
        <relationshipLabel>Log Entries</relationshipLabel>
        <relationshipName>Log_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log Entry</label>
    <listViews>
        <fullName>pymt__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>pymt__Code__c</columns>
        <columns>pymt__Type__c</columns>
        <columns>pymt__Payment__c</columns>
        <columns>pymt__Recurring_Payment__c</columns>
        <columns>pymt__Processor_Connection__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Log Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>